--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
-    "react-datepicker2": "^3.3.13",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
