--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "cloudinary-core": "^2.12.3",
     "moment": "^2.29.3",
     "react": "^18.1.0",
     "react-chartjs-2": "^4.1.0",
