--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "cloudinary-core": "^2.12.3",
+    "cloudinary-react": "^1.7.2",
     "moment": "^2.29.3",
     "react": "^18.1.0",
     "react-chartjs-2": "^4.1.0",
