--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "axios": "^0.27.2",
     "cloudinary-core": "^2.12.3",
     "cloudinary-react": "^1.7.2",
+    "date-fns": "^2.28.0",
     "moment": "^2.29.3",
     "react": "^18.1.0",
     "react-chartjs-2": "^4.1.0",
+    "react-date-range": "^1.4.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
