--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/styled-engine-sc": "^5.8.0",
     "@mui/x-data-grid": "^5.11.1",
     "@mui/x-date-pickers-pro": "^5.0.0-alpha.4",
+    "@mui/x-license-pro": "^5.12.0",
     "@react-google-maps/api": "^2.11.8",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -27,6 +28,7 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
+    "react-range-picker": "^1.0.1",
     "react-redux": "^8.0.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
