--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "chart.js": "^3.8.0",
     "cloudinary-core": "^2.12.3",
     "cloudinary-react": "^1.7.2",
     "date-fns": "^2.28.0",
