--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cloudinary-react": "^1.7.2",
     "date-fns": "^2.28.0",
     "faker": "^6.6.6",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.29.3",
     "react": "^18.1.0",
     "react-chartjs-2": "^4.1.0",
